--- a/static/css/type.css
+++ b/static/css/type.css
@@ -56,6 +56,32 @@ main > .view > .products > .product > img {
   width: 100%;
 }
 
+main > .view > .products > .product > .compare {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  text-align: right;
+  z-index: 1;
+  padding: 10px 10px 5px;
+  border-bottom: 1px solid #e9e9e9;
+}
+
+main > .view > .products > .product > .compare > img {
+  height: 15px;
+  width: 15px;
+  margin: 0;
+}
+
+main > .view > .products > .product > .compare > p {
+  font-size: 0.85rem;
+  margin: 0 0 0 3px;
+  font-weight: 600;
+}
+
+main > .view > .products > .product > .compare:hover {
+  opacity: 0.7;
+}
+
 main > .view > .products > .product > .name {
   padding: 10px 10px 5px;
 }
