Modify product comparsion
1. Add back to last page button on /compare
2. Add compare button on /category

--- a/server/views/compare.pug
+++ b/server/views/compare.pug
@@ -17,6 +17,9 @@ block content
       #products.products
          ul#products_ul.products_ul
       #msg.msg
+      .back
+         p#back < 回到上一頁
+
 
 
       
