Add Google Analytics

--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -17,6 +17,12 @@ html
                     });
                 });
             }
+        script(async src="https://www.googletagmanager.com/gtag/js?id=UA-172748058-1")
+        script.
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-172748058-1');
 body
     header.main_header
         .container
