--- a/server/views/imageSearch.pug
+++ b/server/views/imageSearch.pug
@@ -17,9 +17,10 @@ block content
    .view
       h2 搜尋結果
       #products.products
-      #msg.msg
+      #msg.msg= msg
       img#loading_gif.loading_gif(src='/static/imgs/loading.gif')
-      #image_search.image_search= imageSearch
+      #image_url.image_url= imageUrl
+      #object.object= object
 
 
 
