--- a/static/css/imageSearch.css
+++ b/static/css/imageSearch.css
@@ -28,6 +28,12 @@ main > .view > h2 {
   border-bottom: 1px solid #e6e6e6;
 }
 
+main > .view > h2 > .image_url {
+  width: 50px;
+  height: 50px;
+  margin-left: 10px;
+}
+
 main > .view > .products {
   display: flex;
   flex-wrap: wrap;
@@ -41,9 +47,8 @@ main > .view > .msg {
   flex: 1 100%;
   font-size: 1.5rem;
   font-weight: 600;
-}
+} 
 
-main > .view > .image_url,
 main > .view > .object {
   display: none;
 }
