Replace all alert with sweetalert

--- a/server/views/compare.pug
+++ b/server/views/compare.pug
@@ -17,6 +17,7 @@ block content
       #products.products
          ul#products_ul.products_ul
       #msg.msg
+      img#loading_gif.loading_gif(src='/static/imgs/loading.gif')
       .back
          p#back < 回到上一頁
 
