--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -385,17 +385,6 @@ summary:hover {
   opacity: 0.7;
 }
 
-.member_modal_bg {
-  display: none;
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.2);
-  z-index: 3;
-}
-
 /* ---- Comparison ---- */
 .comparsion_arrow {
   text-align: right;
@@ -680,6 +669,7 @@ summary:hover {
     height: 35px;
     line-height: 35px;
     font-size: 0.8rem;
+    font-weight: 500;
   }
 
   .member_modal > .modal_content > .modal_container > .fb_btn,
