Create back top arrow

--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -111,7 +111,8 @@ body
             .comparsion_items
                 ul#comparsion_ul.comparsion_ul
             a#go_to_compare.go_to_compare 立即比較
-
+    button#backTop.toTop-arrow
+        img(src="/static/imgs/backTop.png")
     footer.main_footer
         .container_footer
             .box_footer
