--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -694,6 +694,26 @@ summary:hover {
     width: 60px;
   }
 
+  .toTop-arrow > img {
+    width: 40px;
+    height: 40px;
+  }
+
+  .toTop-arrow {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    position: fixed;
+    right: 1rem;
+    bottom: 1rem;
+    display: none;
+    z-index: 3;
+  }
+
+  .toTop-arrow:hover {
+    opacity: 0.7;
+  }
+
   .main_footer > .container_footer > .copyright > h4 {
     font-size: 1em;
     line-height: 2rem;
