--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -7,15 +7,13 @@ block append css
   link(rel='stylesheet' href='/static/css/index.css')
 
 block append js
-  script(src="https://cdn.anychart.com/releases/8.7.1/js/anychart-core.min.js")
-  script(src="https://cdn.anychart.com/releases/8.7.1/js/anychart-tag-cloud.min.js")
   script(src='/static/js/index.js')
    
 block content
   main
     #ctn.ctn
       h1
-        img#image_main(src='/static/imgs/logo.png')
+        img(src='/static/imgs/logo.png')
         |GU 搜尋
       .search_main
         select#select_main.search_select_main
