Update Add&Remove Favorite Function
1. Using access_token for select user

--- a/server/views/dashboard.pug
+++ b/server/views/dashboard.pug
@@ -13,9 +13,9 @@ block append js
 block content
   main
    .view
-      .nav
-         h2 自製
-         h2 使用GA
+      //- .nav
+      //-    h2 自製
+      //-    h2 使用GA
       .ctn_1
          .connect_box
             h3 Right Now
