--- a/static/css/imageSearch.css
+++ b/static/css/imageSearch.css
@@ -31,6 +31,7 @@ main > .view > h2 {
 main > .view > h2 > .image_url {
   width: 50px;
   margin-left: 10px;
+  display: none;
 }
 
 main > .view > .products {
