Add clear comparsion button

--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -102,7 +102,9 @@ body
                 p 產品已加入比較。至多可選取 4 項產品或直接查看比較結果。
             .comparsion_items
                 ul#comparsion_ul.comparsion_ul
-            a#go_to_compare.go_to_compare 立即比較
+            .comparsion_btn
+                a#go_to_compare.go_to_compare 立即比較
+                a#clear_compare.clear_compare 清空比較表
     button#backTop.toTop-arrow
         img(src="/static/imgs/backTop.png")
     footer.main_footer
