--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -91,18 +91,18 @@ body
                     img.fb_icon(src="/static/imgs/fb.png")
                     p 使用 Facebook 登入
     block content
-    #comparsion_arrow.comparsion_arrow
+    #comparison_arrow.comparison_arrow
         img(src="/static/imgs/compare_arrow.png")
     #comparison_bg.comparison_bg
-        #comparsion_close.comparsion_close
+        #comparison_close.comparison_close
             p x
         .comparison
-            .comparsion_title
+            .comparison_title
                 h3 產品比較表
                 p 產品已加入比較。至多可選取 4 項產品或直接查看比較結果。
-            .comparsion_items
-                ul#comparsion_ul.comparsion_ul
-            .comparsion_btn
+            .comparison_items
+                ul#comparison_ul.comparison_ul
+            .comparison_btn
                 a#go_to_compare.go_to_compare 立即比較
                 a#clear_compare.clear_compare 清空比較表
     button#backTop.toTop-arrow
