Update track function

--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -57,6 +57,8 @@ body
                     p 個人資料
                 a(href="/profile")
                     p 收藏清單
+                a(href="/profile")
+                    p 追蹤清單
                 .logout
                 p#logoutBtn 登出
 
