--- a/server/views/profile.pug
+++ b/server/views/profile.pug
@@ -25,6 +25,10 @@ block content
             h2 收藏清單
             #products.products
             #msg.msg
+         .track_box
+            h2 降價追蹤清單
+            #track_products.products
+            #track_msg.msg
 
 
 
