Add pre-filled login account

--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -78,9 +78,9 @@ body
                     button#signupBtn.btn 註冊
                 //- Login Form
                 form#login_form.form.login-form
-                    input#login_email.input(type='email' name='email' placeholder='Email 信箱' maxlength="100")
+                    input#login_email.input(type='email' name='email' value="test@test.com" placeholder='Email 信箱' maxlength="100")
                     br
-                    input#login_password.input(type='password' name='password' placeholder='密碼' maxlength="100")
+                    input#login_password.input(type='password' name='password' value="test" placeholder='密碼' maxlength="100")
                     br
                     button#loginBtn.btn 登入
                 button.google_btn(onclick="GoogleLogin()")
